# include-what-costs

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: lhcb_config.yaml
src/include_what_costs/: __init__.py  benchmark.py  cli.py  consolidate.py  graph.py  optimizer.py  parse_header.py  visualize.py
src/include_what_costs/layout/: __init__.py  classify.py  depth.py  filter.py  render.py  twopi.py
tests/: conftest.py  test_classify.py  test_consolidate.py  test_depth.py  test_filter.py  test_graph.py  test_integration.py  test_layout.py
