[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "include-what-costs"
dynamic = ["version"]
description = "Analyze C++ header dependencies and compile-time costs"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = ["pyvis", "pygraphviz", "networkx"]

[project.optional-dependencies]
yaml = ["pyyaml"]
dev = ["pytest"]

[project.scripts]
include-what-costs = "include_what_costs.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/include_what_costs"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line too long - many embedded JS strings
    "SIM102", # Nested if - sometimes clearer
    "SIM105", # contextlib.suppress - try/except is clearer
    "SIM108", # Ternary operator - if/else can be clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B007", "E741"]  # Unused loop vars, ambiguous var names in tests
